--- a/index.html
+++ b/index.html
@@ -3,9 +3,100 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Atish Restaurant</title>
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/home.css" />
+    <title>Atif Restaurant</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container">
+        <div class="logo">
+          Atif Restaurant
+        </div>
+        <div class="menu">
+          <span><a href="#" class="active">Home</a> </span>
+          <span><a href="/facilities">Facilities</a> </span>
+          <span><a href="/about">About Us</a> </span>
+        </div>
+      </div>
+    </header>
+    <section class="section-1">
+      <div class="container">
+        <div class="text-overlay">
+          <h1 class="section-1-head">
+            ROOMS & SUITES
+          </h1>
+          <h4 class="section-1-sub">
+            NEW YORK ACCCOMMODATIONS
+          </h4>
+        </div>
+      </div>
+    </section>
+
+    <section class="section-2">
+      <div class="sign-up-form">
+        <form action="#">
+          <input type="email" placeholder="Enter Email..." />
+          <input type="tel" placeholder="Enter Phone Number..." />
+          <button type="submit">Sign Up</button>
+        </form>
+      </div>
+      <div class="container">
+        <h3>DESIGNED FOR YOUR COMFORT</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed a
+          reiciendis saepe maiores adipisci amet eius commodi laborum? Optio,
+          qui! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Excepturi accusantium beatae natus voluptatibus earum nobis
+          consectetur, autem vitae, dolore molestiae esse vero perspiciatis.
+          Explicabo sunt pariatur alias, ab nisi in.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. At, suscipit
+          eaque? Eligendi aperiam earum quod, rem ratione sed illo quo odio
+          quibusdam beatae. Debitis, quisquam.
+        </p>
+      </div>
+    </section>
+    <section class="section-3">
+      <div class="container">
+        <h3>Accomodations</h3>
+        <div class="item">
+          <img src="./images/accomodation1.jpg" alt="accomodation1" />
+          <p>Luxuries Bed Room</p>
+        </div>
+        <div class="item">
+          <img src="./images/accomodation2.jpg" alt="accomodation1" />
+          <p>Luxuries Dinning Hall</p>
+        </div>
+        <div class="item">
+          <img src="./images/accomodation3.jpg" alt="accomodation1" />
+          <p>Beach View</p>
+        </div>
+      </div>
+    </section>
+    <section class="section-2">
+      <div class="container">
+        <h3>FRIENDLY STAFF. LUXURIOUS AMENITIES.</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed a
+          reiciendis saepe maiores adipisci amet eius commodi laborum? Optio,
+          qui! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Excepturi accusantium beatae natus voluptatibus earum nobis
+          consectetur, autem vitae, dolore molestiae esse vero perspiciatis.
+          Explicabo sunt pariatur alias, ab nisi in.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. At, suscipit
+          eaque? Eligendi aperiam earum quod, rem ratione sed illo quo odio
+          quibusdam beatae. Debitis, quisquam.
+        </p>
+      </div>
+    </section>
+    <footer>
+      <h1>CONTACT US</h1>
+      <p>127 East 55th Street</p>
+      <p>New York, NY 10022</p>
+    </footer>
+  </body>
 </html>
